✨ Updated code logic